# spriNGboard_rysonw

./: README.md  d
week_1/: week_one_exercises.txt
week_10/: CMakeLists.txt  README.md
week_13/: .gitignore  CMakeLists.txt  README.md  week_thirteen_reponse.txt
week_14/: CMakeLists.txt  README.md
week_14/catch_install/share/pkgconfig/: catch2.pc
week_14/docker_install/: install.txt
week_14/test/: CMakeLists.txt
week_14/test/exercise_01_cvs/: CMakeLists.txt  test__exercise_01_cvs.cc
week_15/: .gitignore  README.md  start_container.txt
week_16/: .gitignore  Dockerfile  README.md
week_2/: .gitignore
week_3/: .gitignore  week_three_exercises.txt  week_three_notes.txt
week_4/: week_four_exercises.txt
week_5/: README.md  week_five_response.txt
week_6/: .gitignore  README.md  week_six_notes.txt  week_six_response.txt
week_7/: CMakeLists.txt  README.md  week_seven_response.txt
week_8/: CMakeLists.txt  README.md  week_eight_response.txt
week_8/test/regression/: CMakeLists.txt  test__regression.cc
week_8/test/regression/golden_data/: seed_10.txt  seed_11.txt  seed_12.txt  seed_13.txt  seed_14.txt  seed_15.txt  seed_16.txt  seed_17.txt  seed_18.txt  seed_19.txt  seed_2.txt  seed_20.txt  seed_21.txt  seed_22.txt  seed_23.txt  seed_24.txt  seed_25.txt  seed_26.txt  seed_27.txt  seed_28.txt  seed_29.txt  seed_3.txt  seed_30.txt  seed_31.txt  seed_32.txt  seed_33.txt  seed_34.txt  seed_35.txt  seed_36.txt  seed_37.txt  seed_38.txt  seed_39.txt  seed_4.txt  seed_40.txt  seed_41.txt  seed_42.txt  seed_43.txt  seed_44.txt  seed_46.txt  seed_47.txt  (+8 more)
(+371 files in other folders)
